quit new Integer() to avoid deprecation since 9