@@ -72,10 +72,10 @@ public class TaglibEnhanceLogic {
     protected static final Map<String, Integer> scopes = new HashMap<String, Integer>();
 
     static {
-        scopes.put("page", new Integer(PageContext.PAGE_SCOPE));
-        scopes.put("request", new Integer(PageContext.REQUEST_SCOPE));
-        scopes.put("session", new Integer(PageContext.SESSION_SCOPE));
-        scopes.put("application", new Integer(PageContext.APPLICATION_SCOPE));
+        scopes.put("page", Integer.valueOf(PageContext.PAGE_SCOPE));
+        scopes.put("request", Integer.valueOf(PageContext.REQUEST_SCOPE));
+        scopes.put("session", Integer.valueOf(PageContext.SESSION_SCOPE));
+        scopes.put("application", Integer.valueOf(PageContext.APPLICATION_SCOPE));
     }
 
     /** The key prefix for labels of message resources, which contains dot at last. */
